--- a/seungminjeon/Cargo.toml
+++ b/seungminjeon/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "play_ps_with_rust"
 version = "0.1.0"
-authors = ["Seungmin Jeon <seungmin.jeon@cp.kaist.ac.kr>"]
+authors = ["Seungmin Jeon <zzz845zz@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-path = "src/mod.rs"
+path = "ps/mod.rs"
 
 [[bin]]
 name = "play_ps_with_rust"
@@ -14,3 +14,5 @@ path = "bin/play_ps_with_rust.rs"
 
 [dependencies]
 # TODO: Let's practice `clap` as well
+crossbeam-epoch = "0.9.1"
+crossbeam-utils = "0.8.4"
